--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.5",
     "sass-loader": "^6.0.5",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
